add bootstrap fileinput
